--- a/Website.htm
+++ b/Website.htm
@@ -1,84 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Synchronized Scroll</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Full Width Synchronized Scroll</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
+      overflow: hidden;
+      font-family: sans-serif;
     }
-    .container {
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-    .scroll-box {
-      flex: 1;
+
+     .box {
+      width: 100vw;
       overflow-y: auto;
       padding: 20px;
-      scrollbar-width: none; /* Firefox */
-      -ms-overflow-style: none;  /* IE/Edge */
+      box-sizing: border-box;
+      position: absolute;
+      top: 0;
+      left: 0;
+      scrollbar-width: none;         /* Firefox */
+      -ms-overflow-style: none;      /* IE/Edge */
     }
-    .scroll-box::-webkit-scrollbar {
-      display: none; /* Chrome/Safari */
+
+    .box::-webkit-scrollbar {
+      display: none;                 /* Chrome/Safari */
     }
-    .top {
-      background: #ffeeba;
+
+    #box1 {
+      height: 100vh;
+      background-color: rgba(255, 235, 186, 1); /* semi-transparent */
+      z-index: 2;
+      color: darkslateblue; /* Set text color for box1 */
+
+      /* Mask bottom half with gradient to transparent */
+      -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 70%);
+      mask-image: linear-gradient(to bottom, black 50%, transparent 70%);
+      -webkit-mask-size: 100% 100%;
+      mask-size: 100% 100%;
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
+      pointer-events: auto; /* still interactive */
+
     }
-    .bottom {
-      background: #cce5ff;
+
+    #box2 {
+      height: 100vh;
+      background-color: #cce5ff;
+      z-index: 1;
+      color: darkred; /* Set text color for box2 */
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div id="top" class="scroll-box top">
-      <h2>Top Section</h2>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-    </div>
-    <div id="bottom" class="scroll-box bottom">
-      <h2>Bottom Section</h2>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-      <p>Repeated content...</p>
-    </div>
+
+  <div id="box1" class="box">
+    <p>This is the first scrollable box.</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+
+  </div>
+
+  <div id="box2" class="box">
+      <p>This is the first scrollable box.</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 3 KZDJhfkZJUhfdkjShdf</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+    <p>It has enough text to scroll.</p>
+    <p>Line 3</p><p>Line 4</p><p>Line 5</p><p>Line 6</p><p>Line 7</p>
+    <p>Line 8</p><p>Line 9</p><p>Line 10</p><p>Line 11</p><p>Line 12</p>
+    <p>Line 13</p><p>Line 14</p><p>Line 15</p><p>Line 16</p><p>Line 17</p>
+
   </div>
 
   <script>
-    const top = document.getElementById('top');
-    const bottom = document.getElementById('bottom');
+    const box1 = document.getElementById('box1');
+    const box2 = document.getElementById('box2');
+    let isSyncing = false;
 
-    let syncing = false;
+    function syncScroll(source, target) {
+      if (isSyncing) return;
+      isSyncing = true;
+      const ratio = source.scrollTop / (source.scrollHeight - source.clientHeight);
+      target.scrollTop = ratio * (target.scrollHeight - target.clientHeight);
+      isSyncing = false;
+    }
 
-    top.addEventListener('scroll', () => {
-      if (syncing) return;
-      syncing = true;
-      const ratio = top.scrollTop / (top.scrollHeight - top.clientHeight);
-      bottom.scrollTop = ratio * (bottom.scrollHeight - bottom.clientHeight);
-      syncing = false;
-    });
-
-    bottom.addEventListener('scroll', () => {
-      if (syncing) return;
-      syncing = true;
-      const ratio = bottom.scrollTop / (bottom.scrollHeight - bottom.clientHeight);
-      top.scrollTop = ratio * (top.scrollHeight - top.clientHeight);
-      syncing = false;
-    });
+    box1.addEventListener('scroll', () => syncScroll(box1, box2));
+    box2.addEventListener('scroll', () => syncScroll(box2, box1));
   </script>
+
 </body>
 </html>
